--- a/_config.butterfly.yml.yml
+++ b/_config.butterfly.yml.yml
@@ -488,7 +488,7 @@ tag_ui: # 留空或 index
 background: url(/img/index.jpg)
 
 # Footer Background
-footer_bg: false
+footer_bg: true
 
 # the position of bottom right button/default unit: px (右下角按鈕距離底部的距離/默認單位為px)
 rightside-bottom:
