--- a/_config.butterfly.yml.yml
+++ b/_config.butterfly.yml.yml
@@ -576,8 +576,8 @@ font:
 # Font settings for the site title and site subtitle
 # 左上角網站名字 主頁居中網站名字
 blog_title_font:
-  font_link:
-  font-family:
+  font_link: https://fonts.googleapis.com/css?family=Short+Stack&display=swap
+  font-family: 'Short Stack'
 
 # The setting of divider icon (水平分隔線圖標設置)
 hr_icon:
