--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Sword Art Online
+title: Blog #Sword Art Online
 subtitle: '這雖然是遊戲，但可不是鬧著玩的'
 description: ''
 keywords:
