--- a/_config.butterfly.yml.yml
+++ b/_config.butterfly.yml.yml
@@ -84,7 +84,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img:
+index_img: transparent
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: transparent
@@ -120,7 +120,8 @@ cover:
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    # - https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
+    - https://cdn.jsdelivr.net/gh/sao-coding/sao-background-images@main/blog-background-images/background-images-1.jpg
+    - https://cdn.jsdelivr.net/gh/sao-coding/sao-background-images@main/blog-background-images/background-images-2.jpg
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
@@ -407,7 +408,7 @@ baidu_analytics:
 
 # Google Analytics
 # https://analytics.google.com/analytics/web/
-google_analytics:
+google_analytics: G-2JZBQ42LT2
 
 # CNZZ Analytics
 # https://www.umeng.com/
@@ -429,7 +430,7 @@ google_adsense:
   enable: false
   auto_ads: true
   js: https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js
-  client:
+  client: ca-pub-9296983923346523
   enable_page_level_ads: true
 
 # Insert ads manually (手動插入廣告)
